--- a/app.json
+++ b/app.json
@@ -1,10 +1,6 @@
 {
-  "pages":[
-    "pages/index/index",
-    "pages/logs/logs",
-    "pages/books/books",
-    "pages/search/searchs",
-    "pages/rankingList/rankingList"
+  "pages": [
+    "pages/bookshelf/bookshelf"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -18,21 +14,25 @@
     "selectedColor": "#ff6666",
     "backgroundColor": "#ffffff",
     "borderStyle": "#e7e7e7",
-    "list": [{
-      "pagePath": "pages/index/index",
-      "iconPath": "images/png-read.png",
-      "selectedIconPath": "images/png-readed.png",
-      "text":"书架"
-    },{
-      "pagePath": "pages/books/books",
-      "iconPath": "images/png-books.png",
-      "selectedIconPath": "images/png-books2.png",
-      "text": "书城"
-    },{
-      "pagePath": "pages/search/searchs",
-      "iconPath": "images/png-search.png",
-      "selectedIconPath": "images/png-searched.png",
-      "text": "找书"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/bookshelf/bookshelf",
+        "iconPath": "images/png-read.png",
+        "selectedIconPath": "images/png-readed.png",
+        "text": "书架"
+      },
+      {
+        "pagePath": "pages/bookshelf/bookshelf",
+        "iconPath": "images/png-books.png",
+        "selectedIconPath": "images/png-books2.png",
+        "text": "书城"
+      },
+      {
+        "pagePath": "pages/bookshelf/bookshelf",
+        "iconPath": "images/png-search.png",
+        "selectedIconPath": "images/png-searched.png",
+        "text": "找书"
+      }
+    ]
   }
 }
