--- a/project.config.json
+++ b/project.config.json
@@ -1,4 +1,11 @@
 {
+	"client": "./client",
+	"svr": "./server",
+	"miniprogramRoot": "./client",
+	"qcloudRoot": "./server",
+	"appid": "wx52ff4852000b8744",
+	"projectname": "tengxuny",
+  
   "description": "项目配置文件。",
   "setting": {
     "urlCheck": true,
@@ -9,8 +16,6 @@
   },
   "compileType": "miniprogram",
   "libVersion": "1.7.2",
-  "appid": "wx52ff4852000b8744",
-  "projectname": "%E6%B5%8B%E8%AF%95",
   "condition": {
     "search": {
       "current": -1,
